# Shapes

./: CMakeLists.txt  README.md  Shapes.fs  main.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
logl/: shader_s.h
